<resources>
    <string name="app_name">安抖商家</string>
    <string name="confirmthechange">确认修改</string>
    <string name="login_phonenum">请输入手机号码</string>
    <string name="login_pwd">请输入密码</string>
    <string name="login_txt">商家登录</string>
    <string name="login_tenants">入驻成为商家>></string>
    <string name="user_center">会员中心</string>
    <string name="login_forgotpassword">忘记密码</string>
    <string name="login_fast">快捷方式登录</string>
    <string name="honm_page">首页</string>
    <string name="merchants_page">商家</string>
    <string name="info_page">信息</string>
    <string name="tieba_page">贴吧</string>
    <string name="me_page">我的</string>

    <string name="registered_yanzhenma">获取验证码</string>
    <string name="registered_input_yanzhenma">请输入验证码</string>
    <string name="login_txt1">会员登录>></string>
    <string name="registered_txt">我已阅读并同意</string>
    <string name="registered_fast">快捷方式注册</string>

    <string name="see_more">查看更多</string>
    <string name="chihewanle">吃喝玩乐</string>
    <string name="livebroadcast">在线直播</string>
    <string name="broadcasting">正在直播</string>
    <string name="ordering_meals">外卖</string>
    <string name="online_ordering">在线预约</string>

    <string name="busiessclassify">商家分类</string>
    <string name="address_select">地区筛选</string>
    <string name="paixufangshi">排序方式</string>
    <string name="message_classify">信息分类</string>
    <string name="myrelease">我的发布</string>
    <string name="my_order">我的订单</string>
    <string name="all_order">全部订单</string>
    <string name="center_obligations">待付款</string>
    <string name="center_pendingshipment">待发货</string>
    <string name="center_pendingreceipt">待收货</string>
    <string name="center_tobeevaluated">待评价</string>
    <string name="center_returngoods">退货/款</string>
    <string name="center_foodorder">美食订单</string>
    <string name="center_hotelorder">酒店预订</string>
    <string name="center_vegetablemarket">菜市场</string>
    <string name="center_shoporder">商城订单</string>
    <string name="center_invitation_with_courtesy">邀请有礼</string>
    <string name="center_mywallet">我的钱包</string>
    <string name="center_myrelease">我的发布</string>
    <string name="center_mypatch">我的贴吧</string>
    <string name="center_shoppingcart">购物车</string>
    <string name="center_mycollection">我的收藏</string>
    <string name="center_browsing_traces">浏览痕迹</string>
    <string name="center_myaddress">我的地址</string>
    <string name="center_myscore">我的积分</string>
    <string name="center_mymessage">我的消息</string>
    <string name="center_business_residence">商家入驻</string>
    <string name="center_becomedistributior">成为配送员</string>
    <string name="center_mylivebroadcast">我的直播</string>
    <string name="center_downloadapp">下载APP</string>
    <string name="center_operationvideo">操作视频</string>
    <string name="dangqianyue">当前余额</string>
    <string name="chongzhijine">充值金额</string>
    <string name="chongzhinum">请输入充值金额</string>
    <string name="callnum">联系方式</string>
    <string name="callphonenum">请输入正确的联系电话</string>
    <string name="chongzhifangshi">请选择充值方式</string>
    <string name="yinlianpay">银联支付</string>
    <string name="loading">正在加载...</string>
    <string name="load_failed">加载失败,点击重试!</string>
    <string name="load_end">没有更多数据</string>
</resources>
