<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <ImageView
            android:id="@+id/login_back_image"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_gravity="center"
            android:src="@mipmap/icon_back_black"/>
    </LinearLayout>
    <TextView
        android:textColor="@color/black_28"
        android:textSize="@dimen/typeface21sp"
        android:text="@string/login_forgotpassword"
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginBottom="@dimen/dp_10"
        android:layout_gravity="center"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/registered_phonenum_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:background="@drawable/shape_edit"
        android:drawableLeft="@mipmap/registered_phonenum"
        android:hint="@string/login_phonenum"
        android:padding="@dimen/dp_10"
        android:textSize="@dimen/typeface12sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="@dimen/dp_10">

        <EditText
            android:id="@+id/registered_inputyanzhenma_edittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@drawable/shape_edit"
            android:drawableLeft="@mipmap/verification_code"
            android:hint="@string/registered_input_yanzhenma"
            android:padding="@dimen/dp_10"
            android:textSize="@dimen/typeface12sp" />

        <Button
            android:id="@+id/registered_yanzhenma_button"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_weight="1"
            android:background="@drawable/shape_button"
            android:padding="@dimen/dp_10"
            android:text="@string/registered_yanzhenma"
            android:textColor="@color/colorWhite" />
    </LinearLayout>
    <EditText
        android:id="@+id/registered_pwd_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:background="@drawable/shape_edit"
        android:drawableLeft="@mipmap/editverification_code"
        android:hint="@string/login_pwd"
        android:padding="@dimen/dp_10"
        android:textSize="@dimen/typeface12sp" />
    <Button
        android:id="@+id/confirmthechange_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_10"
        android:background="@drawable/shape_button"
        android:padding="@dimen/dp_10"
        android:text="@string/confirmthechange"
        android:textColor="@color/colorWhite" />
</LinearLayout>
